--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@nuxtjs/supabase": "^0.1.18",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "nuxt": "3.0.0-rc.5",
-    "nuxt-typed-router": "^1.1.2"
+    "nuxt-typed-router": "^1.1.2",
+    "sass": "^1.53.0",
+    "sass-loader": "10"
   },
   "dependencies": {
     "@tiptap/starter-kit": "^2.0.0-beta.191",
