--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/supabase": "^0.1.18",
     "@nuxtjs/tailwindcss": "^5.3.0",
+    "@tiptap/core": "^2.0.0-beta.182",
     "nuxt": "3.0.0-rc.5",
     "nuxt-typed-router": "^1.1.2",
     "sass": "^1.53.0",
@@ -18,6 +19,7 @@
   "dependencies": {
     "@tiptap/starter-kit": "^2.0.0-beta.191",
     "@tiptap/vue-3": "^2.0.0-beta.96",
-    "@vueuse/core": "^8.9.2"
+    "@vueuse/core": "^8.9.2",
+    "superjson": "^1.9.1"
   }
 }
