--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/supabase": "^0.1.18",
     "@nuxtjs/tailwindcss": "^5.3.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@tiptap/core": "^2.0.0-beta.182",
     "nuxt": "3.0.0-rc.5",
     "nuxt-typed-router": "^1.1.2",
