feat: remove all and add basic landing page

--- a/package.json
+++ b/package.json
@@ -4,23 +4,15 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^2.0.0",
-    "@nuxtjs/supabase": "^0.1.18",
-    "@nuxtjs/tailwindcss": "^5.3.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "@tiptap/core": "^2.0.0-beta.182",
-    "nuxt": "3.0.0-rc.5",
-    "nuxt-typed-router": "^1.1.2",
-    "sass": "^1.53.0",
-    "sass-loader": "10"
+    "@nuxtjs/tailwindcss": "^6.2.0",
+    "nuxt": "^3.0.0"
   },
   "dependencies": {
-    "@tiptap/starter-kit": "^2.0.0-beta.191",
-    "@tiptap/vue-3": "^2.0.0-beta.96",
-    "@vueuse/core": "^8.9.2",
-    "superjson": "^1.9.1"
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0"
   }
 }
