--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nuxt": "^3.0.0"
   },
   "dependencies": {
+    "@nuxt/content": "^2.4.3",
+    "@nuxt/image": "^0.7.1",
     "@vueuse/nuxt": "^9.11.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0"
