--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-28020728.5df24eb",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "nuxt": "^3.1.0"
   },
   "dependencies": {
     "@nuxt/content": "^2.4.3",
-    "@nuxt/image": "^0.7.1",
     "@vueuse/nuxt": "^9.11.0",
+    "nuxt-content-assets": "^1.3.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0"
   }
