--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "nuxt": "^3.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxt/content": "^2.4.3",
     "@vueuse/nuxt": "^9.11.0",
     "nuxt-content-assets": "^1.3.2",
