--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nuxt/image-edge": "^1.0.0-28020728.5df24eb",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.9",
+    "humps": "^2.0.1",
     "nuxt": "^3.1.0"
   },
   "dependencies": {
