--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --fix"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-28020728.5df24eb",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.14.1",
     "humps": "^2.0.1",
-    "nuxt": "^3.1.0"
+    "nuxt": "^3.1.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -21,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxt/content": "^2.4.3",
+    "@nuxt/image-edge": "^1.0.0-28020728.5df24eb",
     "@vueuse/nuxt": "^9.11.0",
     "nuxt-content-assets": "^1.3.2",
     "sass": "^1.57.1",
